--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -20,6 +20,8 @@ knitr::opts_chunk$set(echo = FALSE)
 ```{r, include = FALSE}
 library(RtD3)
 library(here)
+library(data.table)
+library(sf)
 ```
 
 <style>
@@ -44,7 +46,7 @@ City level estimates of the time-varying reproduction number of Covid-19 produce
 
 * Case data from the last 10 weeks is extracted from: [brazil.io](https://brasil.io/home/)
 
-* Estimates were only produced for cities with at least 200 cases, and 30 days of data, in the last 8 weeks. All time series were truncated by 3 days to account for delayed reporting (the delay from original report to reporting in this dataset not the adjusted for delay from onset to original report). Estimates are only shown for the last 8 weeks of data combined with a 2 week indicative forecast.
+* Estimates were only produced for cities with at least 200 cases, and 30 days of data, in the last 10 weeks. All time series were truncated by 3 days to account for delayed reporting (the delay from original report to reporting in this dataset not the adjusted for delay from onset to original report). Estimates are only shown for the last 8 weeks of data combined with a 2 week indicative forecast.
 
 * Data on the delay from onset to report were extracted for Brazil from here: [github.com/beoutbreakprepared/nCoV2019](https://github.com/beoutbreakprepared/nCoV2019/)
 
@@ -58,17 +60,18 @@ City level estimates of the time-varying reproduction number of Covid-19 produce
 # Get today
 today <- Sys.Date()
 # Load shapefile
-geoData <- sf::read_sf(here::here("data", "shapefile"))
+geoData <- readRDS(here::here("data", "shapefile", "brazil-admin-2.rds"))
 # Load case data
 cases <- data.table::fread(here::here("data", "cases", paste0(today, ".csv")))
-cases <- cases[, .(sovereignt = city, code = city_ibge_code)]
+cases <- cases[, .(sovereignt = city, code = city_ibge_code)][,
+                 .SD[1,], by = code]
 # Link shapefile with case data to get region
-geoData <- dplyr::left_join(geoData, cases, by = c("GAUL_CODE" = "code"))
+geoData <- merge(geoData, cases, by = "sovereignt", all.x = FALSE)
 # Load estimates
 rtData <- list("Cases" = RtD3::readInEpiNow2(path = here::here("data", "rt", today)))
 # Make interactive widget
 RtD3::summaryWidget(rtData = rtData,
-                    geoData = geoData,
+                    geoData = sf::st_sf(geoData),
                     activeArea = "São Paulo",
                     downloadUrl = "https://github.com/epiforecasts/covid-rt-brazil-subregional")
 ```
