--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -38,7 +38,7 @@ library(sf)
 
 ## About
 
-City level estimates of the time-varying reproduction number of Covid-19 produced using [EpiNow2](epiforecasts.io/EpiNow2) based on data from [brazil.io](https://brasil.io/home/). Regional estimates for Brazil (along with a national estimate) are available [here](https://epiforecasts.io/covid/posts/national/brazil/). Detail of the method used is given [here](https://epiforecasts.io/covid/methods.html), though the estimates shown here were derived using an approximate approach (variational inference) rather than the exact method used on [epiforecasts.io](https://epiforecasts.io/covid) and therefore should only be considered indicative. The code and data supporting these estimates is available [here](https://github.com/epiforecasts/covid-rt-brazil-subregional).
+City level estimates of the time-varying reproduction number of Covid-19 produced using [EpiNow2](epiforecasts.io/EpiNow2) based on data from [brazil.io](https://brasil.io/home/). Regional estimates for Brazil (along with a national estimate) are available [here](https://epiforecasts.io/covid/posts/national/brazil/). Detail of the method used is given [here](https://epiforecasts.io/covid/methods.html), though the estimates shown here were derived using an approximate approach (direct de-convolution of observed cases) rather than the exact method used on [epiforecasts.io](https://epiforecasts.io/covid) and therefore should only be considered indicative. The code and data supporting these estimates is available [here](https://github.com/epiforecasts/covid-rt-brazil-subregional).
 
 ***
 
@@ -46,7 +46,8 @@ City level estimates of the time-varying reproduction number of Covid-19 produce
 
 * Case data from the last 10 weeks is extracted from: [brazil.io](https://brasil.io/home/)
 
-* Estimates were only produced for cities with at least 200 cases, and 30 days of data, in the last 10 weeks. All time series were truncated by 3 days to account for delayed reporting (the delay from original report to reporting in this dataset not the adjusted for delay from onset to original report). Estimates are only shown for the last 8 weeks of data combined with a 2 week indicative forecast.
+* Estimates were only produced for cities with at least 1000 cases, and 90 days of data, since the start of the data extraction. All time series were truncated by 3 days to account for delayed reporting (the delay from original report to reporting in this dataset not the adjusted for delay from onset to original report). Estimates are only shown from the date
+when a given region reported at least 10 cases on a single day.
 
 * Data on the delay from onset to report were extracted for Brazil from here: [github.com/beoutbreakprepared/nCoV2019](https://github.com/beoutbreakprepared/nCoV2019/)
 
